# adanaxis

./: Makefile.am  Makefile.in  README.md  README.win32  SourceConditioner.pl  SourceProcess.pm  adanaxiscontroldemo.spec.generic  adanaxiscontroldemo.spec.mdk  autogen.pl  config.h.in  configure  configure.in  mkinstalldirs
data-adanaxis/: Makefile.am  Makefile.in
data-adanaxis/system/: axisconfig-default.xml  keyconfig-default.xml  objects.xml  start.txt  start_safe.txt
macosx/: MakeRelease.sh
macosx/project/: TestMushPie-Info.plist  all.Info.plist
src/: Makefile.am  Makefile.in
src/API/: mushAppPrefix.h  mushGL.h  mushGame.h  mushMedia.h  mushModel.h  mushMushCollision.h  mushMushGL.h  mushMushGame.h  mushMushMesh.h  mushMushMeshLibrary.h  mushMushPie.h  mushMushRender.h  mushMushcore.h  mushMushcoreIO.h  mushMushcoreSTL.h  mushMustl.h  mushMustlGame.h  mushPie.h  mushPlatform.h
src/Adanaxis/: AdanaxisAppHandler.cpp  AdanaxisAppHandler.h  AdanaxisClient.cpp  AdanaxisClient.h  AdanaxisCommandHandler.cpp  AdanaxisCommandHandler.h  AdanaxisConfig.cpp  AdanaxisConfig.h  AdanaxisData.cpp  AdanaxisData.h  AdanaxisGame.cpp  AdanaxisGame.h  AdanaxisInfo.cpp  AdanaxisInfo.h  AdanaxisLogic.cpp  AdanaxisLogic.h  AdanaxisMeshLibrary.cpp  AdanaxisMeshLibrary.h  AdanaxisPieceDeco.cpp  AdanaxisPieceDeco.h  AdanaxisPieceKhazi.cpp  AdanaxisPieceKhazi.h  AdanaxisPieceProjectile.cpp  AdanaxisPieceProjectile.h  AdanaxisPixelSource.cpp  AdanaxisPixelSource.h  AdanaxisPlayer.cpp  AdanaxisPlayer.h  AdanaxisRender.cpp  AdanaxisRender.h  AdanaxisSTL.cpp  AdanaxisSTL.h  AdanaxisSaveData.cpp  AdanaxisSaveData.h  AdanaxisServer.cpp  AdanaxisStandard.cpp  AdanaxisStandard.h  AdanaxisUtil.cpp  AdanaxisUtil.h  AdanaxisVolatileData.h
src/GL/: GLAppHandler.cpp  GLAppHandler.h  GLAppSignal.h  GLArray.cpp  GLArray.h  GLColour.cpp  GLColour.h  GLCommandHandler.cpp  GLCommandHandler.h  GLData.cpp  GLData.h  GLFont.cpp  GLFont.h  GLFontRef.cpp  GLFontRef.h  GLKeys.cpp  GLKeys.h  GLLightDef.cpp  GLLightDef.h  GLLights.cpp  GLLights.h  GLLine.cpp  GLLine.h  GLModeDef.h  GLPoint.cpp  GLPoint.h  GLQuad.cpp  GLQuad.h  GLRectangle.cpp  GLRectangle.h  GLRender.cpp  GLRender.h  GLRenderable.cpp  GLRenderable.h  GLSTL.cpp  GLSTL.h  GLStandard.h  GLState.cpp  GLState.h  GLString.cpp  (+30 more)
src/Game/: GameAppHandler.cpp  GameAppHandler.h  GameBase.cpp  GameBase.h  GameCode.cpp  GameCode.h  GameCommandHandler.cpp  GameCommandHandler.h  GameConfig.cpp  GameConfig.h  GameConfigDef.cpp  GameConfigDef.h  GameControlFrameDef.cpp  GameControlFrameDef.h  GameController.cpp  GameController.h  GameDialogue.cpp  GameDialogue.h  GameEvent.cpp  GameEvent.h  GameFrameTimer.h  GameGlobalConfig.cpp  GameGlobalConfig.h  GameGraphic.cpp  GameGraphic.h  GameGraphicModel.cpp  GameGraphicModel.h  GameGraphicSprite.cpp  GameGraphicSprite.h  GamePiece.cpp  GamePiece.h  GameProtocol.cpp  GameProtocol.h  GameQuit.cpp  GameQuit.h  GameRecords.cpp  GameRecords.h  GameReg.cpp  GameReg.h  GameRewards.cpp  (+19 more)
src/Media/: MediaAudio.cpp  MediaAudio.h  MediaAudioCommandHandler.cpp  MediaAudioCommandHandler.h  MediaAudioNull.cpp  MediaAudioNull.h  MediaAudioSDL.cpp  MediaAudioSDL.h  MediaSDL.cpp  MediaSDL.h  MediaSTL.cpp  MediaSTL.h  MediaSound.cpp  MediaSound.h  MediaSoundStream.cpp  MediaSoundStream.h  MediaStandard.h
src/MushCollision/: MushCollision.cpp  MushCollision.h  MushCollisionInfo.h  MushCollisionList.cpp  MushCollisionList.h  MushCollisionListEntry.cpp  MushCollisionListEntry.h  MushCollisionPiece.cpp  MushCollisionPiece.h  MushCollisionResolver.cpp  MushCollisionResolver.h  MushCollisionStandard.cpp  MushCollisionStandard.h  MushCollisionWorkspace.cpp  MushCollisionWorkspace.h
src/MushGL/: MushGL.cpp  MushGL.h  MushGLAppHandler.cpp  MushGLAppHandler.h  MushGLArrays.cpp  MushGLBuffer.cpp  MushGLJob.h  (+28 more)
win32/: MakeInstaller.sh  installer.nsi
(+345 files in other folders)
